fixed timer bug, sizing on smaller screens

--- a/style.css
+++ b/style.css
@@ -109,9 +109,20 @@ h2 {
   -moz-user-select: none; /*Firefox*/
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 350px) and (max-width: 480px) {
   /* CSS */
-  #board-container {
-    display: block;
+  #overlay {
+    width: 350px;
+    height: 350px;
+  }
+
+  #board {
+    width: 350px;
+    height: 350px;
+  }
+
+  .tile {
+    width: 22%;
+    height: 22%;
   }
 }
